Change button ids and add event listener

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <button id="btn">Rock</button>
+    <button id="btn">Paper</button>
+    <button id="btn">Scissors</button>
 </body>
 </html>
