Add a wrapping div for buttons, change playerChoice function

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <button id="btn">Rock</button>
-    <button id="btn">Paper</button>
-    <button id="btn">Scissors</button>
+    <div id="wrapper">
+        <button id="btn1">Rock</button>
+        <button id="btn2">Paper</button>
+        <button id="btn3">Scissors</button>
+    </div>
 </body>
 </html>
