--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="wrapper">
-        <button id="btn1">Rock</button>
-        <button id="btn2">Paper</button>
-        <button id="btn3">Scissors</button>
+    <div id="player-choices">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
     </div>
 </body>
 </html>
