Change getComputerChoice() and add rock button

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="player-choices">
-        <button id="rock">Rock</button>
-        <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+    <div class="container">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
     </div>
 </body>
 </html>
