--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
     </div>
+
+    <div class="results">
+        
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
