Add queryselectors for winner and scores

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <button class="scissors">Scissors</button>
     </div>
 
-    <div class="results">
-        
-    </div>
+    <div class="results"></div>
+    <div class="player-score"></div>
+    <div class = computer-score></div>
+    <div class="game-winner"></div>
 
     <script src="script.js"></script>
 </body>
