--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <button class="scissors">Scissors</button>
     </div>
 
-    <div class="results"></div>
-    <div class="player-score"></div>
-    <div class = computer-score></div>
+    <div class="results">Click a button to start the game.</div>
+    <div class="player-score">Player Score:</div>
+    <div class = computer-score>Computer Score:</div>
     <div class="game-winner"></div>
 
     <script src="script.js"></script>
