--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+    <div class="main-container">
     <div class="container">
         <button class="rock">Rock</button>
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
     </div>
-
-    <div class="results">Click a button to start the game.</div>
-    <div class="player-score">Player Score:</div>
-    <div class = computer-score>Computer Score:</div>
-    <div class="game-winner"></div>
+        <div class="display">
+        <div class="results">Click a button to start the game.</div>
+        <div class="player-score">Player Score:</div>
+        <div class = computer-score>Computer Score:</div>
+        <div class="game-winner"></div>
+    </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
