Link style.css to html and add style to main-container

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-container">
-    <div class="container">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
-    </div>
-        <div class="display">
-        <div class="results">Click a button to start the game.</div>
-        <div class="player-score">Player Score:</div>
-        <div class = computer-score>Computer Score:</div>
-        <div class="game-winner"></div>
-    </div>
+        <div class="container">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scissors">Scissors</button>
+    
+        </div>
+            <div class="display">
+            <div class="results">Click a button to start the game.</div>
+            <div class="player-score">Player Score:</div>
+            <div class = computer-score>Computer Score:</div>
+            <div class="game-winner"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
